--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "expo": "~52.0.35",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.6",
+    "expo-file-system": "~18.0.11",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "~17.0.6",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
