Added fix scroll issue in ForYou Page

--- a/app.json
+++ b/app.json
@@ -18,8 +18,12 @@
       },
       "permissions": [
         "WRITE_EXTERNAL_STORAGE",
-        "READ_EXTERNAL_STORAGE"
-      ]
+        "READ_EXTERNAL_STORAGE",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.ACCESS_MEDIA_LOCATION"
+      ],
+      "package": "com.anonymous.wallpaperapp"
     },
     "web": {
       "bundler": "metro",
@@ -49,6 +53,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "05bc98c3-069b-454c-87c8-320863d466ac"
+      }
+    },
+    "owner": "shubham_khodke"
   }
 }
